using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constantes : MonoBehaviour
{
    public static string SIMON_BUTTON_ACTIVE = "Activate";
    public static string SIMON_BUTTON_DEACTIVE = "Deactivate";
    public static string SIMON_BUTTON_USE = "Use";
    public static string SIMON_DOOR_OPEN = "Open";
}
